--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.3.1",
     "recharts": "^2.4.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
