--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.3.1",
     "recharts": "^2.4.3",
+    "theme-ui": "^0.15.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
